<resources>
    <!--general-->
    <string name="app_name">SHG</string>
    <string name="login_label">Login</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="friend">Friend</string>
    <string name="menu">Menu</string>

    <!--menu-->
    <string name="add_group">Add Group</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete_group_menu">Delete Group</string>
    <string name="add_frn_to_grp">Add Friend To Group</string>
    <string name="delete_frnd_menu">Delete Friend</string>
    <string name="calc_interest">Calculate Interest</string>

    <!--ui-->
    <string name="total_int">Total interest-</string>
    <string name="total_amt">Total amount-</string>
    <string name="invalid_no">Invalid Number</string>
    <string name="na">NA</string>
    <string name="ok">ok</string>
    <string name="this_is_required">This is required</string>
    <string name="cost_share_grp">*Cost will be shared equally across group.</string>
    <string name="cost_share_frn">*Cost will be shared equally.</string>
    <string name="not_a_valid_email">Not a valid email</string>
    <string name="r_u_sure_del">Are you sure,You want to delete </string>
    <string name="profile_pic_desc">Profile picture of users</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="balance">0</string>
    <string name="choose_action_exp">Choose action for expense</string>
    <string name="confirm_del_exp">Do you want to delete this expense ?</string>
    <string name="you_paid">You paid</string>
    <string name="you_lent">You lent</string>
    <string name="paid">paid</string>
    <string name="date">date</string>
    <string name="you_owe">You Owe</string>
    <string name="open_app">Open App</string>
    <string name="principal">principal</string>
    <string name="rate">rate per annum</string>
    <string name="month">months</string>
    <string name="you_borrowed">You borrowed</string>
    <string name="edit_expense">EDIT EXPENSE</string>
    <string name="add_grp_member">Add A GROUP MEMBER</string>
    <string name="add_grp_expense">ADD GROUP EXPENSE</string>
    <string name="add_frn_expense">ADD FRIEND EXPENSE</string>
    <string name="add_a_frn">ADD A FRIEND</string>
    <string name="add_a_grp">ADD A GROUP</string>
    <string name="calc_int">CALCULATE INTEREST</string>


    <!--toast-->
    <string name="json_parsing">json_parsing</string>
    <string name="created">Created.</string>
    <string name="expense_added">Expense added.</string>
    <string name="friend_added">Friend added.</string>
    <string name="grp_mem_added">Group member added.</string>
    <string name="friend_deleted">Friend deleted.</string>
    <string name="grp_deleted">Group deleted.</string>
    <string name="exp_updated">Expense updated.</string>
    <string name="exp_deleted">Expense deleted.</string>
    <string name="error_try_again">Unexpected error occurred! Please try again.</string>


    <!--java flag-->
    <string name="type">type</string>
    <string name="provider_url">content://com.example.provider.SHG/users</string>
    <string name="_id">_id</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="balance_key">balance</string>
    <string name="current_user_id">currentUserId</string>
    <string name="rest_url">https://secure.splitwise.com/api/v3.0</string>
    <string name="rest_callback_url">oauth://codepathtweets</string>
    <string name="users__0__user_id">users__0__user_id</string>
    <string name="users__1__user_id">users__1__user_id</string>
    <string name="users__0__paid_share">users__0__paid_share</string>
    <string name="users__1__paid_share">users__1__paid_share</string>
    <string name="users__0__owed_share">users__0__owed_share</string>
    <string name="users__1__owed_share">users__1__owed_share</string>


    <!--json keys-->
    <string name="description">description</string>
    <string name="group_id">group_id</string>
    <string name="email">email</string>
    <string name="members">members</string>
    <string name="cost">cost</string>
    <string name="user">user</string>
    <string name="expenses">expenses</string>
    <string name="friends">friends</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="first_name">first_name</string>
    <string name="user_email">user_email</string>
    <string name="user_first_name">user_first_name</string>
    <string name="friend_id">friend_id</string>
    <string name="limit">limit</string>
    <string name="offset">offset</string>

    <!--api end point-->
    <string name="get_current_user">get_current_user</string>
    <string name="get_group">get_group/</string>
    <string name="get_groups">get_groups</string>
    <string name="create_group">create_group</string>
    <string name="create_expense">create_expense</string>
    <string name="update_expense">update_expense/</string>
    <string name="add_user_to_group">add_user_to_group</string>
    <string name="create_friend">create_friend</string>
    <string name="get_expenses">get_expenses</string>
    <string name="get_friends">get_friends</string>
    <string name="delete_friend">delete_friend/</string>
    <string name="delete_group">delete_group/</string>
    <string name="delete_expense">delete_expense/</string>

    <!--analytics evnts-->
    <string name="click">CLICK/</string>
    <string name="get">GET/</string>
    <string name="widgetopen">widgetopen/</string>

    <!--widget-->
    <string name="nodata">No data available</string>
</resources>
