<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_shopping_cart"
        android:contentDescription="@string/profile_pic_desc"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/date"
        android:paddingRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivUserIcon"
        android:layout_alignBottom="@+id/tvCost" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/description"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvDate"/>

    <TextView
        android:id="@+id/tvPayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/paid"
        android:paddingRight="3dp"
        android:layout_below="@+id/tvDescription"
        android:layout_alignLeft="@+id/tvDescription"
        android:layout_alignStart="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/cost"
        android:layout_alignTop="@+id/tvPayer"
        android:layout_toRightOf="@+id/tvPayer"
        android:layout_toEndOf="@+id/tvPayer" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvBalanceSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/you_owe"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tvBalanceCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/cost"
            android:layout_below="@+id/tvBalanceSummary"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>